--- a/public/index.html
+++ b/public/index.html
@@ -2,109 +2,112 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viewer JSON </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Viewer JSON </title>
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="style.css">
+  <!-- Style CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-light">
-    <nav class="navbar navbar-light bg-white shadow-sm mb-3">
-        <div class="container">
-            <span class="navbar-brand mb-0 h1">JSON Viewer / Editor</span>
-            <span class="text-muted small">
-                Projet Stage DWWM
-            </span>
+  <nav class="navbar navbar-light bg-white shadow-sm mb-3">
+    <div class="container">
+      <span class="navbar-brand mb-0 h1">JSON Viewer / Editor</span>
+      <span class="text-muted small">
+        Projet Stage DWWM
+      </span>
+    </div>
+  </nav>
+
+  <main class="container mb-4">
+    <section class="mb-3">
+      <div class="d-flex flex-wrap gap-2 align-items-center">
+        <button id="load-from-server" class="btn btn-primary btn-sm">Charger le JSON du serveur
+        </button>
+
+        <button id="save-to-server" class="btn btn-success btn-sm">
+          Sauvegarder le JSON sur le serveur
+        </button>
+
+        <div class="ms-0 ms-md-3">
+          <label for="json-file-input" class="form-label mb-1 small">
+            Charger un JSON depuis ton ordinateur :
+          </label>
+
+          <input type="file" name="" id="json-file-input" class="form-control form-control-sm"
+            accept=".json,application/json">
         </div>
-    </nav>
-
-    <main class="container mb-4">
-        <section class="mb-3">
-            <div class="d-flex flex-wrap gap-2 align-items-center">
-                <button id="load-from-server" class="btn btn-primary btn-sm">Charger le JSON du serveur
-                </button>
-
-                <button id="save-to-server" class="btn btn-success btn-sm">
-                    Sauvegarder le JSON sur le serveur
-                </button>
-
-                <div class="ms-0 ms-md-3">
-                    <label for="json-file-input" class="form-label mb-1 small">
-                        Charger un JSON depuis ton ordinateur :
-                    </label>
-
-                    <input type="file" name="" id="json-file-input" class="form-control form-control-sm"
-                        accept=".json,application/json">
-                </div>
-            </div>
-        </section>
+      </div>
+    </section>
 
 
-        <section class="mb-3">
-            <div class="small text-muted" id="message"></div>
-        </section>
+    <section class="mb-3">
+      <div class="small text-muted" id="message"></div>
+    </section>
 
-        <section><label for="json-editor" class="form-label">Editeur JSON brut</label>
-            <textarea name="" id="json-editor" class="form-control" rows="18" spellcheck="false">
+    <section><label for="json-editor" class="form-label">Editeur JSON brut</label>
+      <textarea name="" id="json-editor" class="form-control" rows="18" spellcheck="false">
             </textarea>
-        </section>
-              <!-- Vue tableau du JSON -->
-      <section class="mt-4">
-        <div class="d-flex justify-content-between align-items-center mb-2">
-          <h2 class="h6 mb-0">Vue tableau</h2>
-          <button id="refresh-table" class="btn btn-outline-secondary btn-sm">
-            Mettre à jour à partir du JSON
-          </button>
-        </div>
+    </section>
+    <!-- Vue tableau du JSON -->
+    <section class="mt-4">
+      <div class="d-flex justify-content-between align-items-center mb-2">
+        <h2 class="h6 mb-0">Vue tableau</h2>
+        <button id="refresh-table" class="btn btn-outline-secondary btn-sm">
+          Mettre à jour à partir du JSON
+        </button>
+      </div>
 
-        <div class="mb-2 d-flex flex-wrap align-items-center gap-2">
+      <div class="mb-2 d-flex flex-wrap align-items-center gap-2">
+        <div>
+          <label for="table-section-select" class="form-label small mb-1">
+            Section à afficher :
+          </label>
+          <select id="table-section-select" class="form-select form-select-sm" style="width: auto; min-width: 200px;">
+            <option value="">(Aucune)</option>
+          </select>
           <div>
-            <label for="table-section-select" class="form-label small mb-1">
-              Section à afficher :
+            <label for="table-key-select" class="form-label small mb-1">
+              Filter by _key:
             </label>
-            <select
-              id="table-section-select"
-              class="form-select form-select-sm"
-              style="width: auto; min-width: 200px;"
-            >
-              <option value="">(Aucune)</option>
+            <select id="table-key-select" class="form-select form-select-sm" style="width: 180px;">
+              <option value="">All keys</option>
             </select>
           </div>
 
-          <div>
-            <label for="table-filter-input" class="form-label small mb-1">
-              Filtre texte :
-            </label>
-            <input
-              id="table-filter-input"
-              class="form-control form-control-sm"
-              style="width: 220px;"
-              placeholder="Filtrer les lignes..."
-            />
-          </div>
         </div>
 
-        <div class="table-responsive small" id="table-container">
-          <p class="text-muted mb-0">
-            Aucune vue tableau disponible pour l'instant.
-          </p>
+        <div>
+          <label for="table-filter-input" class="form-label small mb-1">
+            Filtre texte :
+          </label>
+          <input id="table-filter-input" class="form-control form-control-sm" style="width: 220px;"
+            placeholder="Filtrer les lignes..." />
         </div>
-      </section>
+      </div>
 
-    </main>
+      <div class="table-responsive small" id="table-container">
+        <p class="text-muted mb-0">
+          Aucune vue tableau disponible pour l'instant.
+        </p>
+      </div>
+    </section>
+
+  </main>
 
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
