--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,12 @@
 </head>
 
 <body class="bg-light">
-  <nav class="navbar navbar-light bg-white shadow-sm mb-3">
+  <nav id="main-navbar" class="navbar navbar-light bg-white shadow-sm mb-3">
     <div class="container">
+      <button id="toggle-theme-btn" class="btn btn-sm btn-outline-secondary">
+  Toggle theme
+</button>
+
       <span class="navbar-brand mb-0 h1">JSON Viewer / Editor</span>
       <span class="text-muted small">
         Projet Stage DWWM
@@ -50,54 +54,44 @@
       <div class="small text-muted" id="message"></div>
     </section>
 
-    <section><label for="json-editor" class="form-label">Editeur JSON brut</label>
-      <textarea name="" id="json-editor" class="form-control" rows="18" spellcheck="false">
-            </textarea>
-    </section>
-    <!-- Vue tableau du JSON -->
+
+    <!-- ===TABLE + FILTERS=== -->
     <section class="mt-4">
       <div class="d-flex justify-content-between align-items-center mb-2">
         <h2 class="h6 mb-0">Vue tableau</h2>
-        <button id="refresh-table" class="btn btn-outline-secondary btn-sm">
-          Mettre à jour à partir du JSON
-        </button>
+
+        <!-- ===APPLY/CANCEL BUTTONS=== -->
+        <div class="d-flex flex-wrap gap-2">
+          <button id="apply-row-edit" type="button" class="btn btn-sm btn-primary">
+            Apply selected row to JSON
+          </button>
+          <button id="cancel-row-edit" type="button" class="btn btn-sm btn-outline-secondary">
+            Cancel row editing
+          </button>
+        </div>
       </div>
 
+      <!-- ===FILTERS=== -->
       <div class="mb-2 d-flex flex-wrap align-items-center gap-2">
-        <div>
-          <label for="table-section-select" class="form-label small mb-1">
-            Section à afficher :
-          </label>
-          <select id="table-section-select" class="form-select form-select-sm" style="width: auto; min-width: 200px;">
-            <option value="">(Aucune)</option>
-          </select>
-          <div>
-            <label for="table-key-select" class="form-label small mb-1">
-              Filter by _key:
-            </label>
-            <select id="table-key-select" class="form-select form-select-sm" style="width: 180px;">
-              <option value="">All keys</option>
-            </select>
-          </div>
-
-        </div>
-
-        <div>
-          <label for="table-filter-input" class="form-label small mb-1">
-            Filtre texte :
-          </label>
-          <input id="table-filter-input" class="form-control form-control-sm" style="width: 220px;"
-            placeholder="Filtrer les lignes..." />
-        </div>
+        <select id="table-section-select" class="form-select form-select-sm" style="min-width:200px;"></select>
+        <select id="table-key-select" class="form-select form-select-sm" style="min-width:180px;"></select>
+        <input id="table-filter-input" class="form-control form-control-sm" placeholder="Filter text..."
+          style="width:220px;" />
+        <button id="refresh-table" class="btn btn-sm btn-outline-secondary">Refresh</button>
       </div>
 
+      <!-- ===TABLE CONTAINER=== -->
       <div class="table-responsive small" id="table-container">
         <p class="text-muted mb-0">
-          Aucune vue tableau disponible pour l'instant.
+          No data available.
         </p>
       </div>
-    </section>
 
+      <!--===TEXT AREA===-->
+      <section><label for="json-editor" class="form-label">Editeur JSON brut</label>
+        <textarea name="" id="json-editor" class="form-control" rows="18" spellcheck="false">
+            </textarea>
+      </section>
   </main>
 
 
