added download button

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
           Sauvegarder le JSON sur le serveur
         </button>
 
+        <button id="download-json" class="btn btn-sm btn-success">
+  Download JSON
+</button>
+
+
         <div class="ms-0 ms-md-3">
           <label for="json-file-input" class="form-label mb-1 small">
             Charger un JSON depuis ton ordinateur :
