--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -18,8 +19,8 @@
   <nav id="main-navbar" class="navbar navbar-light bg-white shadow-sm mb-3">
     <div class="container">
       <button id="toggle-theme-btn" class="btn btn-sm btn-outline-secondary">
-  Toggle theme
-</button>
+        Toggle theme
+      </button>
 
       <span class="navbar-brand mb-0 h1">JSON Viewer / Editor</span>
       <span class="text-muted small">
@@ -39,8 +40,9 @@
         </button>
 
         <button id="download-json" class="btn btn-sm btn-success">
-  Download JSON
-</button>
+          <i class="bi bi-download"></i>
+          Download JSON
+        </button>
 
 
         <div class="ms-0 ms-md-3">
@@ -82,7 +84,7 @@
         <select id="table-key-select" class="form-select form-select-sm" style="min-width:180px;"></select>
         <input id="table-filter-input" class="form-control form-control-sm" placeholder="Filter text..."
           style="width:220px;" />
-        <button id="refresh-table" class="btn btn-sm btn-outline-secondary">Refresh</button>
+        <button id="refresh-table" class="btn btn-sm btn-outline-secondary">Apply filters</button>
       </div>
 
       <!-- ===TABLE CONTAINER=== -->
