--- a/public/index.html
+++ b/public/index.html
@@ -32,74 +32,106 @@
   <main class="container mb-4">
     <section class="mb-3">
       <div class="d-flex flex-wrap gap-2 align-items-center">
-        <button id="load-from-server" class="btn btn-primary btn-sm">Charger le JSON du serveur
-        </button>
 
-        <button id="save-to-server" class="btn btn-success btn-sm">
-          Sauvegarder le JSON sur le serveur
-        </button>
+        <!-- ===LOAD/SAVE/DOWNLOAD BUTTONS=== -->
+        <div class="btn-group btn-group-sm" role="group" aria-label="Server actions">
+          <button id="load-from-server" class="btn btn-primary btn-sm">Charger le JSON du serveur
+          </button>
 
-        <button id="download-json" class="btn btn-sm btn-success">
-          <i class="bi bi-download"></i>
-          Download JSON
-        </button>
+          <button id="save-to-server" class="btn btn-success btn-sm">
+            Sauvegarder le JSON sur le serveur
+          </button>
 
-
-        <div class="ms-0 ms-md-3">
-          <label for="json-file-input" class="form-label mb-1 small">
-            Charger un JSON depuis ton ordinateur :
+          <button id="download-json" class="btn btn-outline-light">
+            <i class="bi bi-download"></i>
+            Download JSON
+          </button>
+        </div>
+        <!-- ===FILE INPUT=== -->
+        <div class="d-flex flex-wrap align-items-center gap-2">
+          <label for="json-file-input" class="form-label mb-0 small">
+            JSON local :
           </label>
 
-          <input type="file" name="" id="json-file-input" class="form-control form-control-sm"
-            accept=".json,application/json">
+          <input type="file" id="json-file-input" class="form-control form-control-sm" accept=".json,application/json"
+            style="max-width: 260px;" />
         </div>
+
+        <!-- Message de statut -->
+        <div class="ms-auto small text-muted" id="message"></div>
       </div>
     </section>
 
 
-    <section class="mb-3">
-      <div class="small text-muted" id="message"></div>
-    </section>
-
-
-    <!-- ===TABLE + FILTERS=== -->
+    <!-- ===TABLE + FILTERS + RAW EDITOR=== -->
     <section class="mt-4">
+
+      <!-- Titre + switch de vue -->
       <div class="d-flex justify-content-between align-items-center mb-2">
         <h2 class="h6 mb-0">Vue tableau</h2>
 
-        <!-- ===APPLY/CANCEL BUTTONS=== -->
-        <div class="d-flex flex-wrap gap-2">
-          <button id="apply-row-edit" type="button" class="btn btn-sm btn-primary">
-            Apply selected row to JSON
-          </button>
-          <button id="cancel-row-edit" type="button" class="btn btn-sm btn-outline-secondary">
-            Cancel row editing
-          </button>
+        <div class="d-flex align-items-center gap-2">
+          <!-- Ancien boutons de row-edit gardés mais masqués -->
+          <div class="d-none">
+            <button id="apply-row-edit" type="button" class="btn btn-sm btn-primary">
+              Apply selected row to JSON
+            </button>
+            <button id="cancel-row-edit" type="button" class="btn btn-sm btn-outline-secondary">
+              Cancel row editing
+            </button>
+          </div>
+
+          <!-- Switch Vue tableau / Éditeur brut -->
+          <div class="btn-group btn-group-sm" role="group" id="view-toggle">
+            <button type="button" class="btn btn-outline-secondary active" data-view="table">
+              Vue tableau
+            </button>
+            <button type="button" class="btn btn-outline-secondary" data-view="raw">
+              Éditeur JSON brut
+            </button>
+          </div>
         </div>
       </div>
 
-      <!-- ===FILTERS=== -->
+      <!-- Filtres sur une seule ligne -->
       <div class="mb-2 d-flex flex-wrap align-items-center gap-2">
-        <select id="table-section-select" class="form-select form-select-sm" style="min-width:200px;"></select>
-        <select id="table-key-select" class="form-select form-select-sm" style="min-width:180px;"></select>
-        <input id="table-filter-input" class="form-control form-control-sm" placeholder="Filter text..."
-          style="width:220px;" />
-        <button id="refresh-table" class="btn btn-sm btn-outline-secondary">Apply filters</button>
+        <select id="table-section-select" class="form-select form-select-sm w-auto" style="min-width: 220px;"></select>
+
+        <select id="table-key-select" class="form-select form-select-sm w-auto" style="min-width: 180px;"></select>
+
+        <input
+          id="table-filter-input"
+          class="form-control form-control-sm flex-grow-1"
+          placeholder="Filter text..."
+        />
+
+        <button id="refresh-table" class="btn btn-sm btn-outline-secondary">
+          Réinitialiser
+        </button>
       </div>
 
-      <!-- ===TABLE CONTAINER=== -->
-      <div class="table-responsive small" id="table-container">
-        <p class="text-muted mb-0">
-          No data available.
-        </p>
+      <!-- Vue TABLEAU -->
+      <div id="table-view-wrapper">
+        <div class="table-responsive small" id="table-container">
+          <p class="text-muted mb-0">
+            No data available.
+          </p>
+        </div>
       </div>
 
-      <!--===TEXT AREA===-->
-      <section><label for="json-editor" class="form-label">Editeur JSON brut</label>
-        <textarea name="" id="json-editor" class="form-control" rows="18" spellcheck="false">
-            </textarea>
-      </section>
+      <!-- Vue JSON brut -->
+      <div id="raw-view-wrapper" class="mt-3 d-none">
+        <label for="json-editor" class="form-label">Éditeur JSON brut</label>
+        <textarea
+          id="json-editor"
+          class="form-control"
+          rows="18"
+          spellcheck="false"
+        ></textarea>
+      </div>
+    </section>
   </main>
+
 
 
 
