feat modified comments and filter buttons inlined

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
 
         <input
           id="table-filter-input"
-          class="form-control form-control-sm flex-grow-1"
+          class="form-control form-control-sm w-auto"
           placeholder="Filter text..."
         />
 
